--- a/aop_sale/views/stock_move_views.xml
+++ b/aop_sale/views/stock_move_views.xml
@@ -68,7 +68,7 @@
                                    attrs="{'readonly': ['|', ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True)]}"
                             >
 
-                                <tree editable="bottom" decoration-muted="state == 'done' and is_locked == True" decoration-success="product_uom_qty==qty_done" decoration-danger="qty_done &gt; product_uom_qty and state != 'done'">
+                                <tree create="0" edit="0" decoration-muted="state == 'done' and is_locked == True" decoration-success="product_uom_qty==qty_done" decoration-danger="qty_done &gt; product_uom_qty and state != 'done'">
                                     <field name="picking_id" invisible="1"/>
                                     <field name="product_id" invisible="0"/>
                                     <field name="package_level_id" invisible="1"/>
