--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -53,9 +53,9 @@
                     <attribute name="invisible">1</attribute>
             </xpath>
 
-             <xpath expr="//notebook/page[2]/button[@name='404']" position="attributes">
-                    <attribute name="invisible">1</attribute>
-            </xpath>
+<!--             <xpath expr="//notebook/page[2]/button[@name='404']" position="attributes">-->
+<!--                    <attribute name="invisible">1</attribute>-->
+<!--            </xpath>-->
 
              <xpath expr="//page[2]/button[@name='put_in_pack']" position="attributes">
                     <attribute name="string">放入车厢</attribute>
