物流网络菜单指向原库房模块，并新增保险管理和质损管理菜单。手动增加的物流网络菜单更名为物流网络 (功能矩阵)，并移到"其它"菜单下

--- a/aop_sale/views/aop_sale_menu.xml
+++ b/aop_sale/views/aop_sale_menu.xml
@@ -53,7 +53,7 @@
     <menuitem id="goods_manager_menu"
               parent="product_manager_menu"
               name="货物管理"
-              action="product_template_action_product"
+              action="stock.product_template_action_product"
               sequence="10"
     />
 
@@ -233,8 +233,52 @@
               sequence="30"
     />
 
+    <!-- 物流网络->保险管理, 一级菜单 -->
+    <menuitem id="insurance_manager_menu"
+              parent="stock.menu_stock_root"
+              name="保险管理"
+              sequence="30"
+    />
+
+    <!-- 物流网络->保险管理->保险管理, 二级菜单 -->
+    <menuitem id="insurance_manager_sub_menu"
+              parent="insurance_manager_menu"
+              name="保险管理"
+              action="website.action_website"
+              sequence="10"
+    />
+
+    <!-- 物流网络->质损管理, 一级菜单 -->
+    <menuitem id="mass_loss_manager_menu"
+              parent="stock.menu_stock_root"
+              name="质损管理"
+              sequence="50"
+    />
+
+    <!-- 物流网络->质损管理->质损单, 二级菜单 -->
+    <menuitem id="mass_loss_order_child_menu_order" parent="mass_loss_manager_menu" name="质损单"
+              action="action_mass_loss_order" sequence="10"/>
+
+    <!-- 物流网络->质损管理->质损类型, 二级菜单 -->
+    <menuitem id="mass_loss_order_child_menu_type" parent="mass_loss_manager_menu" name="质损类型"
+              action="action_mass_loss_type" sequence="20"/>
+
+    <!-- 物流网络->质损管理->质损部位, 二级菜单 -->
+    <menuitem id="mass_loss_order_child_menu_part" parent="mass_loss_manager_menu" name="质损部位"
+              action="action_mass_loss_part" sequence="30"/>
 
 
+    <!--  修改菜单结算->供应商->账单, 但是以下写法无效，不知道是什么原因？  -->
+
+    <record id="account.menu_action_invoice_tree2" model="ir.ui.menu">
+        <field name="name">成本台账</field>
+
+    </record>
+
+    <record id="account.action_invoice_tree2" model="ir.actions.server">
+        <field name="name">成本台账</field>
+
+    </record>
 
 
 
