--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -6,9 +6,25 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.vpicktree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='picking_type_id']" position="after">
+            <xpath expr="//field[@name='name']" position="after">
                 <field name="product_id"/>
+                <field name="vin"/>
+                <field name="location_id"/>
             </xpath>
+
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                 <attribute name="invisible">1</attribute>
+            </xpath>
+
+            <xpath expr="//field[@name='scheduled_date']" position="attributes">
+                 <attribute name="invisible">1</attribute>
+            </xpath>
+
+             <xpath expr="//field[@name='backorder_id']" position="attributes">
+                 <attribute name="invisible">1</attribute>
+            </xpath>
+
+
         </field>
     </record>
 
