销售单行实现"复制一个产品"这个button的功能，仅能用在 已保存过销售单的表单下，新建(未保存)的销售单在服务端无法查询到数据

--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -7,6 +7,15 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
 
+                <field name="name" position="before">
+                    <field name="id" invisible="1" />
+                </field>
+
+                 <xpath expr="//field[@name='order_line']" position="attributes">
+                    <attribute name="context">{'order_id': id}</attribute>
+
+                </xpath>
+
                 <xpath expr="//field[@name='order_line']/tree" position="attributes">
                     <attribute name="editable">bottom</attribute>
 
