采购单xml合并;采购单行字段照抄销售单行

--- a/aop_sale/views/purchase_views.xml
+++ b/aop_sale/views/purchase_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='order_line']/tree" position="attributes">
-                <attribute name="editable"/>
+                <attribute name="editable">bottom</attribute>
             </xpath>
 
             <!--
@@ -17,12 +17,45 @@
              </xpath>
             -->
 
+            <xpath expr="//field[@name='product_id']" position="attributes">
+                <attribute name="string">货物</attribute>
+            </xpath>
 
-             <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
-                     <field name="service_product_id"
-                                                domain="[('type','=','service')]"
-                                               />
-                </xpath>
+            <xpath expr="//field[@name='date_order']" position="after">
+                <field name="stock_picking_id"
+                       string='调拨单'
+                       attrs="{'invisible': [('stock_picking_id', '=', False)]}"/>
+
+                <field name="stock_picking_batch_id"
+                       string='批量调度单'
+                       attrs="{'invisible': [('stock_picking_batch_id', '=', False)]}"/>
+            </xpath>
+
+
+            <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
+                <field name="service_product_id"
+                       domain="[('type','=','service')]"
+                       string="服务产品"
+                />
+                <field name="spare_part_ids" widget="many2many_tags"/>
+            </xpath>
+
+            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="before">
+                <field name="receipt_no"/>
+                    <field name="plan_date"/>
+                    <!--
+                    <field name="instruction_type" groups="sales_team.group_sale_manager"/>
+                    -->
+                     <field name="oems_warehouse"/>
+                     <field name="oems_order_no"/>
+                     <field name="income_settle_partner_id" />
+                    <field name="manufacturer_short_name" />
+                    <field name="vehicle_model_type" />
+                    <field name="manufacturer_common_name" />
+                    <field name="dealer_partner_id" />
+                    <field name="station_start_end" />
+                    <field name="route_id" string="路由" />
+            </xpath>
 
 
             <xpath expr="//field[@name='order_line']/form//field[@name='product_id']" position="attributes">
