--- a/aop_sale/views/aop_sale_menu.xml
+++ b/aop_sale/views/aop_sale_menu.xml
@@ -220,7 +220,7 @@
     <!-- 二级菜单 -->
     <menuitem id="income_parameter_manager_menu"
               parent="financial_manager_menu"
-              name="收入台账"
+              name="收入结算清单"
               action="account.action_invoice_tree"
               sequence="20"
     />
@@ -228,7 +228,7 @@
     <!-- 二级菜单 -->
     <menuitem id="cost_parameter_manager_menu"
               parent="financial_manager_menu"
-              name="成本台账"
+              name="成本结算清单"
               action="account.action_vendor_bill_template"
               sequence="30"
     />
