1.收入、成本结算清单加一个字段对账批次，搜索组合功能能用,分组功能也添加了对账批次 2.路由所有规则能对应一个产品 3.合同条款行里面加2个字段，起点，终点

--- a/aop_sale/views/delivery_carrier.xml
+++ b/aop_sale/views/delivery_carrier.xml
@@ -67,6 +67,8 @@
                                      <field name="name" string="条款名称"/>
                                      <field name="product_id" string="货物"/>
                                      <field name="service_product_id" string="服务产品" />
+                                     <field name="start_position" />
+                                     <field name="end_position" />
 
                                 </tree>
 
@@ -116,6 +118,8 @@
                     -->
 
                     <field name="service_product_id" />
+                    <field name="start_position" />
+                    <field name="end_position" />
 
 
                 </xpath>
