--- a/aop_sale/views/account_invoice.xml
+++ b/aop_sale/views/account_invoice.xml
@@ -41,6 +41,7 @@
 
                  <xpath expr="//field[@name='cash_rounding_id']" position="after">
                        <field name="account_batch_no"/>
+                       <field name="account_period_id"/>
                    </xpath>
 
             </field>
@@ -55,6 +56,7 @@
             <field name="arch" type="xml">
                 <field name="partner_id" position="before">
                     <field name="account_batch_no"/>
+                    <field name="account_period_id"/>
                 </field>
             </field>
         </record>
@@ -68,6 +70,7 @@
             <field name="arch" type="xml">
                 <field name="vendor_display_name" position="before">
                     <field name="account_batch_no"/>
+                    <field name="account_period_id"/>
                 </field>
             </field>
         </record>
@@ -82,6 +85,7 @@
                 <data>
                     <xpath expr="//field[@name='vendor_bill_purchase_id']" position="after">
                         <field name="account_batch_no"/>
+                        <field name="account_period_id"/>
                     </xpath>
                 </data>
             </field>
