--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -7,7 +7,9 @@
         <field name="inherit_id" ref="stock.vpicktree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
+
                 <field name="product_id"/>
+                <field name="aging"/>
                 <field name="vin"/>
                 <field name="location_id"/>
             </xpath>
