--- a/aop_sale/views/sale_views.xml
+++ b/aop_sale/views/sale_views.xml
@@ -19,7 +19,7 @@
         </field>
     </record>
 
-    <record id="action_diaodu_with_onboarding" model="ir.actions.act_window">
+    <record id="action_dispatch_with_onboarding" model="ir.actions.act_window">
         <field name="name">调度订单</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sale.order</field>
@@ -27,15 +27,15 @@
         <field name="view_id" ref="sale.view_quotation_tree_with_onboarding"/>
         <field name="view_mode">tree,kanban,form,calendar,pivot,graph,activity</field>
         <field name="search_view_id" ref="sale.sale_order_view_search_inherit_quotation"/>
-        <field name="context">{'search_default_my_quotation': 1}</field>
-
+        <field name="domain">[('order_type', '=', 'dispatch')]</field>
+        <field name="context">{'search_default_my_quotation': 1, 'order_type_context': 'dispatch'}</field>
     </record>
 
-     <menuitem id="diaodu_order"
+     <menuitem id="dispatch_order"
             name="调度订单"
-            action="action_diaodu_with_onboarding"
+            action="action_dispatch_with_onboarding"
             parent="sale.sale_order_menu"
-            sequence="2" groups="sales_team.group_sale_salesman"/>
+            sequence="2" groups="aop_sale.group_dispatch_right"/>
 
 
 </odoo>
