--- a/aop_sale/wizard/sale_make_invoice_advance_views.xml
+++ b/aop_sale/wizard/sale_make_invoice_advance_views.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-     <record id="view_sale_advance_payment_inv_inherit_aop_sale" model="ir.ui.view">
-            <field name="name">创建台账</field>
-            <field name="model">sale.advance.payment.inv</field>
-            <field name="inherit_id" ref="sale.view_sale_advance_payment_inv"/>
-            <field name="arch" type="xml">
+    <record id="view_sale_advance_payment_inv_inherit_aop_sale" model="ir.ui.view">
+        <field name="name">创建结算清单</field>
+        <field name="model">sale.advance.payment.inv</field>
+        <field name="inherit_id" ref="sale.view_sale_advance_payment_inv"/>
+        <field name="arch" type="xml">
 
-                <xpath expr="//p[@class='oe_grey']" position="replace">
-                    <p class="oe_grey">
-                       草稿台账将被创建，以便于在验证前检查
-                    </p>
+            <xpath expr="//p[@class='oe_grey']" position="replace">
+                <p class="oe_grey">
+                    草稿结算清单将被创建，以便于在验证前检查
+                </p>
+            </xpath>
 
-                </xpath>
+            <xpath expr="//field[@name='advance_payment_method']" position="before">
+                <field name="reconciliation_batch_no" string="对账批次号"/>
+            </xpath>
 
+            <xpath expr="//button[@name='create_invoices'][1]" position="attributes">
+                <attribute name="string">创建并查看结算清单</attribute>
 
-                <xpath expr="//button[@name='create_invoices'][1]" position="attributes">
-                    <attribute name="string">创建并查看台账</attribute>
+            </xpath>
 
-                </xpath>
+            <xpath expr="//button[@name='create_invoices'][2]" position="attributes">
+                <attribute name="string">创建结算清单</attribute>
+            </xpath>
 
-                <xpath expr="//button[@name='create_invoices'][2]" position="attributes">
-                    <attribute name="string">创建台账</attribute>
-
-                </xpath>
-
-                <field name="advance_payment_method" position="attributes">
-                     <attribute name="string">你要怎样创建台账?</attribute>
-                </field>
-
-
-
+            <field name="advance_payment_method" position="attributes">
+                <attribute name="string">创建结算清单</attribute>
             </field>
-        </record>
+
+        </field>
+    </record>
 
     <record id="action_view_sale_advance_payment_inv" model="ir.actions.act_window">
-        <field name="name">创建台账</field>
+        <field name="name">创建结算清单</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sale.advance.payment.inv</field>
         <field name="view_type">form</field>
