添加了装车、卸车等实际操作类型

--- a/aop_sale/views/stock_picking_views.xml
+++ b/aop_sale/views/stock_picking_views.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
 
             <field name="sequence_id" position="after">
+                <field name="operate_type_id" />
                 <field name="product_id" domain="[('type','=','service')]" string="服务产品" />
             </field>
 
