--- a/aop_sale/views/stock_picking_batch_view.xml
+++ b/aop_sale/views/stock_picking_batch_view.xml
@@ -23,7 +23,7 @@
 
                     <field name="dispatch_type"/>
 
-                    <field name="car_no"/>
+                    <field name="car_no"  attrs='{"invisible": [("dispatch_type", "not in", ["tlzc", "tlxc"])]}'/>
 
                     <field name="partner_id" string="供应商" widget="res_partner_many2one" domain="[('supplier','=',True)]" />
 
@@ -58,9 +58,10 @@
                       <field name="vin"/>
                      <field name="location_id"/>
                      <field name="location_dest_id"/>
-                     <field name="picking_type_id" string="作业"/>
+
                      <field name="must_loading"/>
                      <!--
+                     <field name="picking_type_id" string="作业"/>
                      <field name="product_uom_qty"/>
                      <field name="quantity_done"/>
                      -->
