--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -46,6 +46,7 @@
 
             <xpath expr="//field[@name='picking_type_id']" position="after">
                 <field name="move_id_without_package" string="" />
+                <field name="degree" />
 
             </xpath>
 
